// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should return production github global env 1`] = `
Object {
  "isPreProduction": false,
  "isProduction": false,
  "metadata": Object {
    "annotations": Object {
      "app.github.com/job": "xxxxxxx-job",
      "app.github.com/ref": "refs/heads/e2e-branch",
      "app.github.com/repo": "socialgouv/sample-next-app",
      "app.github.com/run": "12345",
      "app.github.com/sha": "8843083",
    },
    "domain": "dev2.fabrique.social.gouv.fr",
    "git": Object {
      "branch": "refs/heads/e2e-branch",
      "remote": "socialgouv/sample-next-app",
    },
    "labels": Object {
      "application": "sample-next-app",
      "cert": "wildcard",
      "owner": "sample-next-app",
      "team": "sample-next-app",
    },
    "namespace": Object {
      "name": "sample-next-app-e2e-branch",
    },
    "rancherId": "c-bd7z2:p-7ms8p",
    "subdomain": "sample-next-app-e2e-branch",
  },
  "projectName": "sample-next-app",
  "shortSha": "8843083",
  "tag": "sha-8843083edb7f873cad1d1420731a60773594ffae",
}
`;

exports[`should return tagged github global env 1`] = `
Object {
  "isPreProduction": false,
  "isProduction": false,
  "metadata": Object {
    "annotations": Object {
      "app.github.com/job": "xxxxxxx-job",
      "app.github.com/ref": "refs/heads/e2e-branch",
      "app.github.com/repo": "socialgouv/sample-next-app",
      "app.github.com/run": "12345",
      "app.github.com/sha": "8843083",
    },
    "domain": "dev2.fabrique.social.gouv.fr",
    "git": Object {
      "branch": "refs/heads/e2e-branch",
      "remote": "socialgouv/sample-next-app",
    },
    "labels": Object {
      "application": "sample-next-app",
      "cert": "wildcard",
      "owner": "sample-next-app",
      "team": "sample-next-app",
    },
    "namespace": Object {
      "name": "sample-next-app-e2e-branch",
    },
    "rancherId": "c-bd7z2:p-7ms8p",
    "subdomain": "sample-next-app-e2e-branch",
  },
  "projectName": "sample-next-app",
  "shortSha": "8843083",
  "tag": "sha-8843083edb7f873cad1d1420731a60773594ffae",
}
`;

exports[`should return the github global env 1`] = `
Object {
  "isPreProduction": false,
  "isProduction": false,
  "metadata": Object {
    "annotations": Object {
      "app.github.com/job": "xxxxxxx-job",
      "app.github.com/ref": "refs/heads/e2e-branch",
      "app.github.com/repo": "socialgouv/sample-next-app",
      "app.github.com/run": "12345",
      "app.github.com/sha": "8843083",
    },
    "domain": "dev2.fabrique.social.gouv.fr",
    "git": Object {
      "branch": "refs/heads/e2e-branch",
      "remote": "socialgouv/sample-next-app",
    },
    "labels": Object {
      "application": "sample-next-app",
      "cert": "wildcard",
      "owner": "sample-next-app",
      "team": "sample-next-app",
    },
    "namespace": Object {
      "name": "sample-next-app-e2e-branch",
    },
    "rancherId": "c-bd7z2:p-7ms8p",
    "subdomain": "sample-next-app-e2e-branch",
  },
  "projectName": "sample-next-app",
  "shortSha": "8843083",
  "tag": "sha-8843083edb7f873cad1d1420731a60773594ffae",
}
`;

exports[`should return the github global env of the cluster dev2 1`] = `
Object {
  "isPreProduction": false,
  "isProduction": false,
  "metadata": Object {
    "annotations": Object {
      "app.github.com/job": "xxxxxxx-job",
      "app.github.com/ref": "refs/heads/e2e-branch",
      "app.github.com/repo": "socialgouv/sample-next-app",
      "app.github.com/run": "12345",
      "app.github.com/sha": "8843083",
    },
    "domain": "dev2.fabrique.social.gouv.fr",
    "git": Object {
      "branch": "refs/heads/e2e-branch",
      "remote": "socialgouv/sample-next-app",
    },
    "labels": Object {
      "application": "sample-next-app",
      "cert": "wildcard",
      "owner": "sample-next-app",
      "team": "sample-next-app",
    },
    "namespace": Object {
      "name": "sample-next-app-e2e-branch",
    },
    "rancherId": "c-bd7z2:p-7ms8p",
    "subdomain": "sample-next-app-e2e-branch",
  },
  "projectName": "sample-next-app",
  "shortSha": "8843083",
  "tag": "sha-8843083edb7f873cad1d1420731a60773594ffae",
}
`;

exports[`should return the github global env with slugify 1`] = `
Object {
  "isPreProduction": false,
  "isProduction": false,
  "metadata": Object {
    "annotations": Object {
      "app.github.com/job": "xxxxxxx-job",
      "app.github.com/ref": "refs/heads/domifa-commander-8.x",
      "app.github.com/repo": "socialgouv/sample-next-app",
      "app.github.com/run": "12345",
      "app.github.com/sha": "8843083",
    },
    "domain": "dev2.fabrique.social.gouv.fr",
    "git": Object {
      "branch": "refs/heads/domifa-commander-8.x",
      "remote": "socialgouv/sample-next-app",
    },
    "labels": Object {
      "application": "sample-next-app",
      "cert": "wildcard",
      "owner": "sample-next-app",
      "team": "sample-next-app",
    },
    "namespace": Object {
      "name": "sample-next-app-domifa-commander-8x",
    },
    "rancherId": "c-bd7z2:p-7ms8p",
    "subdomain": "sample-next-app-domifa-commander-8x",
  },
  "projectName": "sample-next-app",
  "shortSha": "8843083",
  "tag": "sha-8843083edb7f873cad1d1420731a60773594ffae",
}
`;

exports[`should throw because of empty strings 1`] = `
"Wrong environment variables
required \\"GITHUB_SHA\\": \\" \\" should not be an empty string
required \\"GITHUB_REF\\": \\" \\" should not be an empty string
required \\"GITHUB_JOB\\": \\" \\" should not be an empty string
required \\"GITHUB_RUN_ID\\": \\" \\" should not be an empty string
required \\"GITHUB_REPOSITORY\\": \\" \\" should not be an empty string
required \\"SOCIALGOUV_BASE_DOMAIN\\": \\" \\" should not be an empty string
"
`;
